Bug 240589 hasMoreElements is off by one for simple enumerators returned by the component registrar patch by cmlenz@gmx.de r=alecf sr=alecf